Added authentication to server and frontend. Can now register users. Co-authored By: SadlifeCaw <caws@itu.dk>, Stalin1999 <mpia@itu.dk>

--- a/itu-minitwit/Server/appsettings.Development.json
+++ b/itu-minitwit/Server/appsettings.Development.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
-  }
+  },
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    }
+  },
+  "AllowedHosts": "*"
 }
 
