--- a/itu-minitwit/Server/appsettings.json
+++ b/itu-minitwit/Server/appsettings.json
@@ -2,7 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+    }
+  },
+  "IdentityServer": {
+    "Clients": {
+      "itu_minitwit.Client": {
+        "Profile": "IdentityServerSPA"
+      }
     }
   },
   "AllowedHosts": "*"
