--- a/itu-minitwit/Server/itu-minitwit.Server.csproj
+++ b/itu-minitwit/Server/itu-minitwit.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -11,13 +11,17 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
@@ -43,17 +47,7 @@
     <Folder Include="Interfaces\Repositories\" />
     <Folder Include="wwwroot" />
   </ItemGroup>
-
-
   <ItemGroup>
-    <Folder Include="Migrations" />
-  </ItemGroup>
-
-
-  <ItemGroup>
-    <Compile Remove="Migrations\20230207173721_InitialCreate.Designer.cs" />
-    <Compile Remove="Migrations\20230207174606_InitialCreate.cs" />
-    <Compile Remove="Migrations\20230207174606_InitialCreate.Designer.cs" />
-    <Compile Remove="Migrations\20230207174916_InitialCreate.Designer.cs" />
+    <None Include="Areas\Identity\Pages\Shared\_LoginPartial.cshtml" />
   </ItemGroup>
 </Project>
