Setup Docker. Requires a SSL certificate, we have a self-signed one for now.
Co-authored-by: Sadlifecaw <caws@itu.dk>
Co-authored-by: Stalin1999 <mpia@itu.dk>

--- a/itu-minitwit/Server/Properties/launchSettings.json
+++ b/itu-minitwit/Server/Properties/launchSettings.json
@@ -24,6 +24,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
   "iisSettings": {
