Fix appsettings layout. Update readme.
Co-authored-by: Sadlifecaw <caws@itu.dk>
Co-authored-by: Stalin1999 <mpia@itu.dk>

--- a/itu-minitwit/Server/appsettings.Production.json
+++ b/itu-minitwit/Server/appsettings.Production.json
@@ -7,10 +7,10 @@
     }
   },
   "IdentityServer": {
-    "Clients": {
-      "itu_minitwit.Client": {
-        "Profile": "IdentityServerSPA"
-      }
+    "Key": {
+      "Type": "File",
+      "FilePath": "<path-to-certificate>",
+      "Password": "<password-to-certificate>"
     }
   },
   "AllowedHosts": "*"
