Make HttpClient for calling anonymously

--- a/itu-minitwit/Server/appsettings.Production.json
+++ b/itu-minitwit/Server/appsettings.Production.json
@@ -9,8 +9,8 @@
   "IdentityServer": {
     "Key": {
       "Type": "File",
-      "FilePath": "<path-to-certificate>",
-      "Password": "<password-to-certificate>"
+      "FilePath": "server.pfx",
+      "Password": "123"
     }
   },
   "AllowedHosts": "*"
