readme and launchsettings update

--- a/MiniTwit/Properties/launchSettings.json
+++ b/MiniTwit/Properties/launchSettings.json
@@ -16,7 +16,10 @@
       "launchUrl": "",
       "applicationUrl": "https://localhost:7112;http://localhost:5196",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DB_HOST": "localhost",
+        "DB_PORT": "2345",
+        "DB_PASSWORD": "postgres"
       }
     },
     "IIS Express": {
@@ -24,7 +27,10 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DB_HOST": "localhost",
+        "DB_PORT": "2345",
+        "DB_PASSWORD": "postgres"
       }
     }
   }
