fix: update personal access token for github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,14 +117,14 @@ jobs:
       if: steps.versionize.outcome == 'success'
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.PAT }}
         branch: ${{ github.ref }}
         tags: true
     - name: "Create release"
       if: steps.versionize.outcome == 'success'
       uses: "actions/github-script@v5"
       with:
-        github-token: "${{ secrets.GITHUB_TOKEN }}"
+        github-token: "${{ secrets.PAT }}"
         script: |
           try {
             const tags_url = context.payload.repository.tags_url + "?per_page=1"
