--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
           SSH_HOST: ${{ secrets.SSH_HOST }}
 
   release:
-    needs: release
+    needs: deploy
     runs-on: ubuntu-latest
 
     steps:
