--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,24 @@ services:
     depends_on:
       postgresdb:
         condition: service_healthy
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - outside
+
+
+  grafana:
+    image: grafana/grafana:4.5.2
+    ports:
+      - "3000:3000"  
+    networks:
+      - outside  
   
 networks:
   outside:
