--- a/remote_files/docker-compose.yml
+++ b/remote_files/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - DB_HOST=${DB_HOST}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_PORT=${DB_PORT}
+    networks:
+      - outside
 
   prometheus:
     image: prom/prometheus
@@ -25,10 +27,12 @@ services:
     networks:
       - outside
 
-
   grafana:
     image: grafana/grafana:4.5.2
     ports:
       - "3000:3000"  
     networks:
       - outside  
+        
+networks:
+  outside:
