--- a/remote_files/docker-compose.yml
+++ b/remote_files/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - DB_HOST=${DB_HOST}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_PORT=${DB_PORT}
+      - DB_USER=${DB_USER}
     networks:
       - outside
 
