--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -181,6 +181,6 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"NiclasHjortkjaer_itu-minitwit" /o:"jasonderulo" /d:sonar.login=$SONAR_TOKEN /d:sonar.host.url="https://sonarcloud.io"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"NiclasHjortkjaer_itu-minitwit" /o:"jasonderulo" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login=$SONAR_TOKEN
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
