--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Install python test dependencies
         run: |
+          sudo apt install firefox
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install -r python_tests/requirements.txt
