--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Start test containers
-        run: docker-compose -f "docker-compose.yml" up -d --build
+        run: docker-compose -f ".github/docker-compose.yml" up -d --build
 
       - name: Set up Python 3.7
         uses: actions/setup-python@v4
