try fix ui tests 2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           wget -O ~/FirefoxSetup.tar.bz2 "https://download.mozilla.org/?product=firefox-latest&os=linux64"
           sudo tar xjf ~/FirefoxSetup.tar.bz2 -C /opt/
+          sudo mv /usr/lib/firefox/firefox /usr/lib/firefox/firefox_backup
           sudo ln -s /opt/firefox/firefox /usr/lib/firefox/firefox
 
       - name: Install python test dependencies
