fix: docker swarm baby

--- a/remote_files/nginx/nginx.conf
+++ b/remote_files/nginx/nginx.conf
@@ -2,6 +2,13 @@ events {}
 http {
     include       mime.types;
     charset       utf-8;
+
+    upstream minitwitapp {
+        ip_hash;
+        server 207.154.226.0:8765;
+        server 139.59.138.0:8765;
+        server 157.230.23.22:8765;
+    }
     server {
         listen 80 default_server;
         server_name jasonderulo.live www.jasonderulo.live;
@@ -9,7 +16,7 @@ http {
         root /app;
 
         location /simulator {
-            proxy_pass http://172.17.0.1:8765/simulator;
+            proxy_pass http://minitwitapp/simulator;
         }
 
         location / {
@@ -26,7 +33,7 @@ http {
         root /app;
 
         location / {
-            proxy_pass http://172.17.0.1:8765;
+            proxy_pass http://minitwitapp;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
