--- a/remote_files/docker-compose.yml
+++ b/remote_files/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 80:7112
+      - 8765:7112
     environment:
       - ASPNETCORE_URLS=http://+:7112/
       - DB_HOST=${DB_HOST}
@@ -18,6 +18,8 @@ services:
       - LOKI_HOST=172.17.0.1
     networks:
       - outside
+    deploy:
+      replicas: 3
 
   prometheus:
     image: prom/prometheus
@@ -43,6 +45,19 @@ services:
     command: -config.file=/etc/loki/local-config.yaml
     networks:
       - outside
-      
+    
+  proxy:
+    image: minitwitnginx
+    build:
+      context: ./nginx
+    ports:
+      - 80:80
+      - 443:443
+    networks: 
+      - outside
+
 networks:
   outside:
+    
+# docker stack deploy -c docker-compose.yml ministack
+# TODO make network overlay and replace 172.17.0.1 here and in prometheus.yml
