--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ on:
     branches:
       - main
       - master
+    paths-ignore:
+      - 'report/**'
   # allow manual triggers for now too
   workflow_dispatch:
     manual: true
