--- a/remote_files/nginx/nginx.conf
+++ b/remote_files/nginx/nginx.conf
@@ -3,12 +3,21 @@ http {
     include       mime.types;
     charset       utf-8;
 
-    upstream minitwitapp {
+    # The simulator api uses round robin load balancing
+    upstream api {
+        server 207.154.226.0:8765;
+        server 139.59.138.0:8765;
+        server 157.230.23.22:8765;
+    }
+
+    # The normal app uses ip_hash to persist session
+    upstream app {
         ip_hash;
         server 207.154.226.0:8765;
         server 139.59.138.0:8765;
         server 157.230.23.22:8765;
     }
+
     server {
         listen 80 default_server;
         server_name jasonderulo.live www.jasonderulo.live;
@@ -16,7 +25,9 @@ http {
         root /app;
 
         location /simulator {
-            proxy_pass http://minitwitapp/simulator;
+            # The simulator doesn't redirect to https because it caused very bad performance?
+            proxy_pass http://api/simulator;
+            proxy_next_upstream off;
         }
 
         location / {
@@ -33,7 +44,7 @@ http {
         root /app;
 
         location / {
-            proxy_pass http://minitwitapp;
+            proxy_pass http://app;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
