--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,10 +48,11 @@ services:
       - outside
 
   grafana:
-    image: grafana/grafana:8.2.6
+    image: grafana/grafana:latest
     ports:
       - "3000:3000"  
-#    volumes:
+    volumes:
+      - ./grafana/db:/var/lib/grafana
 #      - ./grafana/dashboard.yaml:/etc/grafana/provisioning/dashboards/main.yaml
 #      - ./grafana/datasource.yaml:/etc/grafana/provisioning/datasources/main.yaml
 #      - ./grafana/dashboards:/var/lib/grafana/dashboards
@@ -59,25 +60,6 @@ services:
       - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-    entrypoint:
-      - sh
-      - -euc
-      - |
-        mkdir -p /etc/grafana/provisioning/datasources
-        cat <<EOF > /etc/grafana/provisioning/datasources/ds.yaml
-        apiVersion: 1
-        datasources:
-        - name: Loki
-          type: loki
-          access: proxy 
-          orgId: 1
-          url: http://loki:3100
-          basicAuth: false
-          isDefault: true
-          version: 1
-          editable: false
-        EOF
-        /run.sh
     networks:
       - outside 
     depends_on:
