--- a/remote_files/prometheus.swarm.yml
+++ b/remote_files/prometheus.swarm.yml
@@ -24,6 +24,6 @@ scrape_configs:
     scrape_interval: 5s
 
     static_configs:
-      - targets: ['143.244.205.161']
+      - targets: ['web:8765']
         labels:
           group: 'production'
